manifests/l2c-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: l2c-frontend
  name: l2c-frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: l2c-frontend
status:
  loadBalancer: {}
