manifests/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:   
  name: frontend-ingress   
  annotations:   
    nginx.ingress.kubernetes.io/rewrite-target: /$1  
spec:
  rules:
  - host: ingress-is-fun.cloudnative.party
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
